--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Hub Profile Reviewer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Git Hub Profile Reviewer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Git Hub Profile Reviewer</h1>
-        <div class="input-group">
-            <input type="text" id="usernameInput" placeholder="Enter GitHub user name">
-            <div id="profile">
-            <button onclick="getProfile()">Search Profile</button>
-            </div>
-        </div>
+  <div class="container">
+    <h1>Git Hub Profile Reviewer</h1>
 
+    <div class="input-group">
+      <input type="text" id="usernameInput" placeholder="Enter GitHub user name" />
+      <button onclick="getProfile()">Search Profile</button>
     </div>
-    <script src="script.js"></script>
+
+    <div id="profile"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
